violating_resources/pod-security-policy/capabilities/samples/capabilities-demo/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /opa-disallowed
  name: capabilities-demo-disallowed-ephemeral
  labels:
    owner: me.agilebank.demo
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        cpu: "100m"
        memory: "30Mi"
  ephemeralContainers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      securityContext:
        capabilities:
          add: ["disallowedcapability"]
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
