violating_resources/pod-security-policy/capabilities/samples/capabilities-demo/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /opa-allowed
  name: capabilities-demo-example-allowed
  labels:
    owner: me.agilebank.demo
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      securityContext:
        capabilities:
          add: ["something"]
          drop: ["must_drop", "another_one"]
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
